[gd_scene load_steps=3 format=3 uid="uid://ndjisg7fxapk"]

[ext_resource type="Script" path="res://scripts/FileContentDialog.gd" id="1_3tbva"]
[ext_resource type="Script" path="res://scripts/ResponsiveGrid.gd" id="2_mnlux"]

[node name="FileContentDialog" type="Window"]
title = "File Content"
initial_position = 2
size = Vector2i(800, 600)
exclusive = true
script = ExtResource("1_3tbva")

[node name="Layout" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TabContainer" type="TabContainer" parent="Layout"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 2

[node name="Levels" type="VBoxContainer" parent="Layout/TabContainer"]
visible = false
layout_mode = 2

[node name="Textures" type="VBoxContainer" parent="Layout/TabContainer"]
visible = false
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Layout/TabContainer/Textures"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="TextureList" type="GridContainer" parent="Layout/TabContainer/Textures/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
script = ExtResource("2_mnlux")

[node name="Info" type="Label" parent="Layout/TabContainer/Textures"]
layout_mode = 2
size_flags_vertical = 8
text = "0 Textures found"
horizontal_alignment = 2

[node name="Sounds" type="VBoxContainer" parent="Layout/TabContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Layout/TabContainer/Sounds"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="SoundsList" type="VBoxContainer" parent="Layout/TabContainer/Sounds/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Layout/TabContainer/Sounds"]
layout_mode = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Layout/TabContainer/Sounds/VBoxContainer"]

[node name="SoundProgress" type="HSlider" parent="Layout/TabContainer/Sounds/VBoxContainer"]
layout_mode = 2
max_value = 20.0

[node name="PlayButton" type="Button" parent="Layout/TabContainer/Sounds/VBoxContainer"]
layout_mode = 2
text = "|"
